# postgres-mcp-server

./: .env.example  .gitattributes  .github-description.md  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  claude_desktop_config.json  package.json  postgres_server.py  pyproject.toml  requirements.txt  setup.py  test_connection.py  test_server.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  security.yml
scripts/: setup_github_repo.py
tests/: test_smoke.py
