[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postgres-mcp-server"
version = "1.0.0"
description = "🔄 PostgreSQL MCP Server – AI-Powered PostgreSQL Management & Monitoring"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "mukul975", email = "mukul975@users.noreply.github.com" }
]
maintainers = [
    { name = "mukul975", email = "mukul975@users.noreply.github.com" }
]
keywords = [
    "postgresql",
    "mcp",
    "model-context-protocol", 
    "ai-database-tools",
    "claude",
    "chatgpt",
    "database-monitoring",
    "database-management",
    "sql-automation",
    "database-diagnostics",
    "database-optimization",
    "postgres",
    "ai-integration",
    "database-security",
    "query-optimizer",
    "database-health-check",
    "python-postgresql",
    "devops-ai",
    "database-admin"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators", 
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]
test = [
    "pytest>=7.0.0", 
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.urls]
Homepage = "https://github.com/mukul975/postgres-mcp-server"
Repository = "https://github.com/mukul975/postgres-mcp-server.git"
Documentation = "https://github.com/mukul975/postgres-mcp-server#readme"
"Bug Tracker" = "https://github.com/mukul975/postgres-mcp-server/issues"
Changelog = "https://github.com/mukul975/postgres-mcp-server/releases"

[project.scripts]
postgres-mcp-server = "postgres_server:main"

[tool.setuptools]
packages = ["postgres_mcp_server"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
